<resources>
    <string name="app_name">Itribez_Android</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="edt_txt_password">Password</string>
    <string name="btn_log_in">Log In</string>
    <string name="txtview_forgot_password">Forgot Password?</string>
    <string name="txtview_or">OR</string>
    <string name="btn_create_new_account">Create new account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="val_empty_first_name">Enter FirstName\n</string>
    <string name="val_empty_last_name">Enter LastName\n</string>
    <string name="val_empty_email">Enter Email Id\n</string>
    <string name="val_empty_pass">Enter 6 digit Password</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>